--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,5 +1,23 @@
-nav {
-  display: flex;
-  flex-direction: row;
-  border: 2px solid orangered;
+nav  {
+  border: 2px solid orangered; 
+  
+  ul {
+    display: flex;
+    flex-direction: row;
+    max-width: 700px;
+    width: 90%;
+    margin: 0 auto;
+    width: 100%;
+    justify-content: center;  
+    
+     li {
+
+       margin-right: 20px;
+       list-style: none;
+       font-size: 18px;
+       a {
+         text-decoration: none;
+       }
+     }
+  }
 }
